# GlassEngine

./: .gitignore  CMakeLists.txt  MYTHOUGHTSANDFUCKINGIDEASSS.md  README.md  TODO  VisualStudio.gitignore  buildProject_D.bat  buildProject_R.bat  genProject.bat
Core/: CMakeLists.txt  Whats needed.txt
Core/src/: Logger.h  core.cpp  core.h  plugin.h  pluginLoader.cpp
GlassEngine_Build/include/GlassEngine/: ErrorCodes.h  GlassEngine.h  Interfaces.h  Logger.h  Renderer.h  RendererAPI.h  Shader.h  camera.h  core.h  entrypoint.h  graphicsPlugin.h  plugin.h  pluginLoader.h
GlassEngine_Build/lib/pkgconfig/: glfw3.pc
GlassEngine_Build/win64/Debug/lib/: GlassEngineCore.exp  GlassEngineCore.lib  GlassGFX.openGL.exp  GlassGFX.openGL.lib  glew.lib  glewd.lib  glfw3.lib  loader-opt.lib  vulkan-1.exp
GlassEngine_Build/win64/Release/lib/: GlassEngineCore.exp  GlassEngineCore.lib  GlassGFX.openGL.exp  GlassGFX.openGL.lib  glew.lib  glfw3.lib  loader-opt.lib  vulkan-1.exp  vulkan-1.lib
GlassEngine_Build/win64/lib/Debug/: glewd.lib
Plugins/: CMakeLists.txt
Plugins/GlassGFXopenGL/: CMakeLists.txt
Plugins/GlassGFXopenGL/src/: openglPlugin.cpp
Runtime/: CMakeLists.txt
Scripting/: CMakeLists.txt  Whats needed.txt
Test Project/: CMakeLists.txt
Test Project/src/: CameraController.h  GameManager.h  main.cpp
Test Project/testProj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  testingProj.sln  testingProj.vcxproj  testingProj.vcxproj.filters
Test Project/testProj/testingProj.dir/Debug/: testingProj.exe.recipe  testingProj.ilk
Test Project/testProj/testingProj.dir/Debug/testingProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  testingProj.lastbuildstate
Test Project/testProj/testingProj.dir/Release/: testingProj.exe.recipe
Test Project/testProj/testingProj.dir/Release/testingProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  testingProj.lastbuildstate
Test Project/testProj/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Test Project/testProj/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
Test Project/testProj/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Test Project/testProj/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
Test Project/testProj/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
TestAssets/Shaders/: Default_Fragment.glsl  Default_Vertex.glsl
TestAssets/Shaders/2D/: 2D_Unlit_Fragment.glsl  2D_Unlit_Vertex.glsl  DepthVisual_frag.glsl  defaultShaderFrag.glsl  defaultShaderVert.glsl  vert.glsl
TestAssets/Shaders/3D/: 3D_Lit_Fragment.glsl  3D_Lit_Vertex.glsl  3D_Unlit_Vertex.glsl
Test_project/: CMakeLists.txt
Test_project/src/: CameraController.cpp  CameraController.h  GameManager.cpp  GameManager.h  main.cpp
buildPlugins/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GlassEngine.sln  GlassEnginePlugins.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
buildPlugins/GlassGFXopenGL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GlassGFX.openGL.sln  GlassGFX.openGL.vcxproj  GlassGFX.openGL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildPlugins/GlassGFXopenGL/GlassGFX.openGL.dir/Debug/: GlassGFX.openGL.dll.recipe  GlassGFX.openGL.ilk
buildPlugins/GlassGFXopenGL/GlassGFX.openGL.dir/Debug/GlassGFX.openGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GlassGFX.openGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
buildPlugins/GlassGFXopenGL/GlassGFX.openGL.dir/Release/: GlassGFX.openGL.dll.recipe
buildPlugins/GlassGFXopenGL/GlassGFX.openGL.dir/Release/GlassGFX.openGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  GlassGFX.openGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
buildPlugins/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildPlugins/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildPlugins/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildPlugins/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
buildPlugins/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
buildPlugins/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
src/Core/: CMakeLists.txt  GlassEngine.h  Whats needed.txt
src/Core/src/: BinarySearching.h  ErrorCodes.h  GoCS.cpp  GoCS.h  ImageUtils.cpp  ImageUtils.h  InputSystem.h  Light.h  Logger.h  Mathematics.h  ModelLoader.cpp  ModelLoader.h  PrimitiveTypes.h  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  SceneLoader.cpp  SceneLoader.h  Shader.h  VertexArray.h  camera.cpp  camera.h  core.cpp  core.h  core_version.h  defaults.cpp  defaults.h  entrypoint.h  glassSTL.h  graphicsPlugin.h  plugin.h  pluginLoader.cpp  pluginLoader.h  stb_image.h  texture.h  timestep.h  version.h.in
src/Core/src/ModelLoading/: Material.h  ModelMesh.cpp  ModelMesh.h  OBJ_Loader.cpp  OBJ_Loader.h
src/Plugins/: CMakeLists.txt
src/Plugins/GlassGFXopenGL/: CMakeLists.txt
src/Plugins/GlassGFXopenGL/src/: oglPlugin.h  openglPlugin.cpp  version.h.in  version_opengl.h
src/Runtime/: CMakeLists.txt
src/Runtime/src/: runtime.h
(+11 files in other folders)
