cmake_minimum_required(VERSION 3.30)
project(GlassEngineRuntime VERSION 1.0)
set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
include(FetchContent)
if(WIN32)
set(SYSTEM_USING "win64")
elseif(UNIX)
set(SYSTEM_USING "unix_x64")
endif()
set(OutputIncDir  "${CMAKE_INSTALL_PREFIX}/include")


file(GLOB HEAD_FILES  src/*.h )
file(GLOB SRC_FILES  src/*.cpp)

add_library(GlassEngineRuntime SHARED ${SRC_FILES} ${HEAD_FILES})

target_include_directories(GlassEngineRuntime PUBLIC "${OutputIncDir}")




install(TARGETS GlassEngineRuntime RUNTIME DESTINATION $<IF:$<CONFIG:Debug>,${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG},${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}> LIBRARY DESTINATION $<IF:$<CONFIG:Debug>,${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG},${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}>  ARCHIVE DESTINATION $<IF:$<CONFIG:Debug>,${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG},${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}>)